--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body> 
     <h1>Odin Recipes</h1>
+    <p>Click to access the <a href="recipes/spaghetti.html">Spaghetti</a> page</p>
 
 </body>
 
